tests/snapshots/cli__cache_clean_refuses_a_directory_with_foreign_content.snap
---
source: tests/cli.rs
assertion_line: 144
expression: snapshot
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
[CACHE] doesn't look like a vivace cache (unexpected entries); refusing to remove it
