tests/snapshots/cli__cache_clean_removes_a_platform_bucket.snap
---
source: tests/cli.rs
expression: snapshot
---
success: true
exit_code: 0
----- stdout -----
Removed the vivace cache at [CACHE]

----- stderr -----
