tests/snapshots/cli__cache_clean_removes_a_repo_bucket.snap
---
source: tests/cli.rs
assertion_line: 269
expression: snapshot
---
success: true
exit_code: 0
----- stdout -----
Removed the vivace cache at [CACHE]

----- stderr -----
