tests/snapshots/cli__cache_clean_removes_the_cache_dir.snap
---
source: tests/cli.rs
assertion_line: 132
expression: snapshot
---
success: true
exit_code: 0
----- stdout -----
Removed the vivace cache at [CACHE]

----- stderr -----
