tests/snapshots/cli__cache_prune_leaves_the_repo_bucket_alone.snap
---
source: tests/cli.rs
assertion_line: 288
expression: snapshot
---
success: true
exit_code: 0
----- stdout -----
Removed 0 entries (0 bytes) from [CACHE]

----- stderr -----
