tests/snapshots/cli__cache_size_reports_archives_and_pointers.snap
---
source: tests/cli.rs
assertion_line: 226
expression: snapshot
---
success: true
exit_code: 0
----- stdout -----
5 bytes (1 archives, 1 pointers) in [CACHE]

----- stderr -----
