tests/snapshots/cli__dump_autoload_without_a_lock_writes_the_root_autoload.snap
---
source: tests/cli.rs
expression: snapshot
---
success: true
exit_code: 0
----- stdout -----
Generated autoload files

----- stderr -----
