tests/snapshots/cli__install_bogus_flag_is_a_usage_error_not_exit_two.snap
---
source: tests/cli.rs
expression: snapshot
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: unexpected argument '--bogus-flag' found

Usage: viv install [OPTIONS]

For more information, try '--help'.
