tests/snapshots/cli__install_composer_disable_network_env_behaves_like_offline.snap
---
source: tests/cli.rs
assertion_line: 177
expression: snapshot
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Normalized [PROJECT]/composer.json
Network disabled, request canceled: not in the store (3 packages):
  monolog/monolog (3.11.0)
  psr/log (3.0.2)
  psr/container (2.0.2)
