tests/snapshots/cli__install_fails_when_a_requirement_is_missing_from_the_lock.snap
---
source: tests/cli.rs
expression: snapshot
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Warning: The lock file is not up to date with the latest changes in composer.json. You may be getting outdated dependencies. It is recommended that you run `viv update` or `viv update <package name>`.
- Required package "acme/not-locked" is not present in the lock file.
This usually happens when composer files are incorrectly merged or the composer.json file is manually edited.
Read more about correctly resolving merge conflicts https://getcomposer.org/doc/articles/resolving-merge-conflicts.md
and prefer using the "require" command over editing the composer.json file directly https://getcomposer.org/doc/03-cli.md#require-r
